# Jovo

./: .env  .gitignore  DayBook.xlsx  busy_utils.py  crud_database.py  logging_config.py  pyproject.toml  reports.py  tally_utils.py  test.py
database/: connection.py  pyproject.toml
database/models/: base.py  busy_models.py
